Issue 15 component단위 파일관리 component 코드 리팩토링 (#16)
* Refactor: component관리목적 App.js생성 및 nav, footer component 코드 리팩토링

* Fix: 파일명 변경

* Fix: main.js로 파일명 변경 및 코드수정

* Fix: public폴더명 변경

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="./public/component/NavComponent.js"></script>
+    <script type="module" src="./public/main.js"></script>
   </body>
 </html>
