--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RED-YOO-TOSS-TECH Page</title>
   </head>
   <body>
-    <div id="app"></div>
+    <nav id="nav"></nav>
+    <div id="app">
+      <div class="main"></div>
+    </div>
+    <footer id="footer"></footer>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
-
